--- a/tutor/templates/addcourse.html
+++ b/tutor/templates/addcourse.html
@@ -9,16 +9,16 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Add New Course</legend>
             <div class="form-group">
-                {{ form.title.label(class="form-control-label") }}
-                {% if form.title.errors %}
-                    {{ form.title(class="form-control form-control-lg is-invalid") }}
+                {{ form.name.label(class="form-control-label") }}
+                {% if form.name.errors %}
+                    {{ form.name(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.title.errors %}
+                        {% for error in form.name.errors %}
                         <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.title(class="form-control form-control-lg") }}
+                    {{ form.name(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
         </fieldset>
