--- a/tutor/templates/base.html
+++ b/tutor/templates/base.html
@@ -20,6 +20,11 @@
                 <li class="nav-item active">
                   <a class="nav-link border" style="background-color: white" href="{{ url_for('courses_route') }}">Courses</a>
                 </li>
+                {% if current_user.is_authenticated %}
+                <li>
+                  <a class="nav-link border" style="background-color: white" href="{{ url_for('private_route', id=current_user.id) }}">My Courses</a>
+                </li>
+                {% endif %}
               </ul>
               {% if current_user.is_authenticated %}
                 <div class="my-2 my-lg-0">
