--- a/tutor/templates/course.html
+++ b/tutor/templates/course.html
@@ -21,6 +21,9 @@
         </div>
         <a class="btn btn-primary ml-3" href="{{ url_for('new_resource', id=id) }}" role="button">add new resource</a>
         <a class="btn btn-primary ml-3" href="{{ url_for('courses_route') }}" role="button">back to courses</a>
+        {% if current_user.is_authenticated %}
+            <a class="btn btn-primary ml-3" href="{{ url_for('fav_route', course_id=id, user_id=current_user.id) }}" role="button">add course to favorites</a>
+        {% endif%}
     </div>
  
 
