--- a/tutor/templates/addcourse.html
+++ b/tutor/templates/addcourse.html
@@ -7,7 +7,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Add New Course</legend>
+                <legend class="border-bottom mb-4">Add New Course to Tutor</legend>
                 <div class="form-group">
                     {{ form.name.label(class="form-control-label") }}
                     {% if form.name.errors %}
